# error-handling-presentation

./: Cargo.toml  rustfmt.toml  shell.nix
data/: div_by_zero.json  malformed.json  ok.json
src/: anyhow_error_handling.rs  main.rs  manual_error_handling.rs  no_error_handling.rs  thiserror_error_handling.rs
